--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "node app/server",
-    "test": "mocha --reporter spec"
+    "test": "npm run server & mocha --reporter spec"
   },
   "keywords": [],
   "author": "",
