--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ node_js:
 install:
   - npm install
   - npm test
+
+notifications:
+  irc:
+    channels:
+      - "chat.freenode.net#cibot"
+    on_success: change # default: always
+    on_failure: always # default: always
