--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "chai": "^4.0.2",
     "express": "^4.15.3",
+    "irc": "^0.5.2",
     "mocha": "^3.4.2",
     "request": "^2.81.0"
   }
