--- a/package.json
+++ b/package.json
@@ -12,9 +12,20 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.0.2",
+    "debug": "^2.6.8",
     "express": "^4.15.3",
+    "hapi": "^16.4.3",
     "irc": "^0.5.2",
+    "joi": "^10.6.0",
     "mocha": "^3.4.2",
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-node": "^5.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
