--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "hapi": "^16.4.3",
     "irc": "^0.5.2",
     "joi": "^10.6.0",
+    "leveldown": "^1.7.2",
+    "levelup": "^1.3.8",
     "mocha": "^3.4.2",
     "request": "^2.81.0"
   },
