--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "debug": "^2.6.8",
     "hapi": "^16.4.3",
     "irc": "^0.5.2",
+    "johnny-five": "^0.11.1",
     "joi": "^10.6.0",
     "leveldown": "^1.7.2",
     "levelup": "^1.3.8",
     "mocha": "^3.4.2",
-    "request": "^2.81.0"
+    "oled-font-5x7": "^1.0.0",
+    "oled-js": "^4.0.4",
+    "png-to-lcd": "^1.0.3",
+    "request": "^2.81.0",
+    "temporal": "^0.5.0"
   },
   "devDependencies": {
     "eslint": "^4.0.0",
