--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "server": "node app/server",
     "test": "mocha --reporter spec"
   },
-  "keywords": ["nodebot", "travis"],
+  "keywords": [
+    "nodebot",
+    "travis"
+  ],
   "author": "gorhgorh",
   "license": "ISC",
   "dependencies": {
@@ -29,11 +32,16 @@
     "temporal": "^0.5.0"
   },
   "devDependencies": {
-    "eslint": "^4.0.0",
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.19.0",
+    "eslint-config-react-app": "^1.0.5",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-flowtype": "^2.33.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.0.1",
     "eslint-plugin-standard": "^3.0.1"
   }
 }
