--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "debug": "^2.6.8",
     "fs-extra": "^3.0.1",
     "hapi": "^16.4.3",
+    "inert": "^4.2.0",
     "irc": "^0.5.2",
     "johnny-five": "^0.11.1",
     "joi": "^10.6.0",
