--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app/server",
     "server": "node app/server",
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "clearDb": "rm -rf buildDb"
   },
   "keywords": [
     "nodebot",
@@ -29,7 +30,6 @@
     "oled-font-5x7": "^1.0.0",
     "oled-js": "^4.0.4",
     "png-to-lcd": "^1.0.3",
-    "request": "^2.81.0",
     "temporal": "^0.5.0"
   },
   "devDependencies": {
@@ -43,6 +43,7 @@
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.0.1",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "request": "^2.81.0"
   }
 }
