--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app/server",
-    "server": "node app/server",
+    "start": "concurrently \"npm run server\" \"npm run react\"",
+    "react": "node startClient.js",
+    "server": "nodemon hookserver",
     "test": "mocha --reporter spec",
     "clearDb": "rm -rf buildDb"
   },
@@ -30,10 +31,12 @@
     "oled-font-5x7": "^1.0.0",
     "oled-js": "^4.0.4",
     "png-to-lcd": "^1.0.3",
+    "socket.io": "^2.0.3",
     "temporal": "^0.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "concurrently": "^3.5.0",
     "eslint": "^3.19.0",
     "eslint-config-react-app": "^1.0.5",
     "eslint-config-standard": "^10.2.1",
@@ -44,6 +47,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.0.1",
     "eslint-plugin-standard": "^3.0.1",
+    "nodemon": "^1.11.0",
     "request": "^2.81.0"
   }
 }
