--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "oled-js": "^4.0.4",
     "png-to-lcd": "^1.0.3",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "temporal": "^0.5.0"
   },
   "devDependencies": {
